edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_OPAQUE;

message InstallationInfo {
  string id = 1;
  google.protobuf.Timestamp created = 2;
}
